// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches addanswer snapshot 1`] = `
<div
  className="sc-papXJ eyeRQT"
>
  <div
    className="sc-jqUVSM fZdTSS"
  >
    <div
      className="sc-kDDrLX emtVmb"
    >
      <div
        className="sc-iqcoie kFbfYt"
      >
        <h2
          className="sc-hAZoDl hNuKL"
        >
          Submit Your Answer
        </h2>
      </div>
      <h5
        className="sc-idiyUo eVtZXZ"
      >
        undefined: undefined
      </h5>
      <form>
        <h3
          className="sc-bjUoiL prTFN"
        >
          Your Answer *
        </h3>
        <textarea
          className="sc-evZas dLSVMU"
          onChange={[Function]}
          required={true}
          type="text"
        />
        <h3
          className="sc-bjUoiL prTFN"
        >
          What is your nickname? *
        </h3>
        <input
          className="sc-breuTD hrBoTZ"
          onChange={[Function]}
          placeholder="Example: jack543!"
          required={true}
          type="text"
        />
        <p
          className="sc-dIouRR hxmtMU"
        >
          For privacy reasons, do not use your full name or email address
        </p>
        <h3
          className="sc-bjUoiL prTFN"
        >
          Email *
        </h3>
        <input
          className="sc-breuTD hrBoTZ"
          onChange={[Function]}
          placeholder="Example: jack@email.com"
          required={true}
          type="email"
        />
        <p
          className="sc-dIouRR hxmtMU"
        >
          For authentication reasons, you will not be emailed
        </p>
        <button
          className="sc-hHLeRK cqhdEl"
          onClick={[Function]}
        >
          SubmitAnswer
        </button>
        <button
          className="sc-dmRaPn hnwOGC"
        >
          Close
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`matches addquestion snapshot 1`] = `
<div
  className="sc-papXJ eyeRQT"
>
  <div
    className="sc-jqUVSM fZdTSS"
  >
    <div
      className="sc-kDDrLX emtVmb"
    >
      <div
        className="sc-iqcoie kFbfYt"
      >
        <h2
          className="sc-hAZoDl hNuKL"
        >
          Ask Your Question
        </h2>
      </div>
      <h5
        className="sc-idiyUo eVtZXZ"
      >
        About the undefined
      </h5>
      <form>
        <h3
          className="sc-bjUoiL prTFN"
        >
          Your Question *
        </h3>
        <textarea
          className="sc-evZas dLSVMU bodytext"
          onChange={[Function]}
          required={true}
          type="text"
        />
        <h3
          className="sc-bjUoiL prTFN"
        >
          What is your nickname? *
        </h3>
        <input
          className="sc-breuTD hrBoTZ"
          onChange={[Function]}
          placeholder="Example: jackson11!"
          required={true}
          type="text"
        />
        <p
          className="sc-dIouRR hxmtMU"
        >
          For privacy reasons, do not use your full name or email address
        </p>
        <h3
          className="sc-bjUoiL prTFN"
        >
          Email *
        </h3>
        <input
          className="sc-breuTD hrBoTZ"
          onChange={[Function]}
          placeholder="Example: jackson@email.com"
          required={true}
          type="email"
        />
        <p
          className="sc-dIouRR hxmtMU"
        >
          For authentication reasons, you will not be emailed
        </p>
        <button
          className="sc-hHLeRK cqhdEl"
          onClick={[Function]}
        >
          Submit Question
        </button>
        <button
          className="sc-dmRaPn hnwOGC"
        >
          Close
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`matches questions component snapshot 1`] = `
<div
  className="sc-bczRLJ gSbPJH"
>
  <div
    className="sc-ksZaOG jLLjsY"
  >
    <h2
      className="sc-hAZoDl hNuKL"
    >
      Questions and Answers
    </h2>
  </div>
  <div
    className="sc-hKMtZM emBaIV"
  >
    <input
      className="sc-crXcEl fqMCSk"
      id="search"
      name="search"
      onChange={[Function]}
      placeholder="Have a question? Search for the answers…"
      type="text"
    />
    <button
      className="sc-dmRaPn hnwOGC"
      onClick={[Function]}
    >
      🔍
    </button>
    <div
      className="sc-eCYdqJ ktwMtI"
    >
      <button
        className="sc-hHLeRK cqhdEl"
        onClick={[Function]}
      >
        Add A Question
      </button>
    </div>
  </div>
</div>
`;
